--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ table, td {
         <h1>About Me</h1>
         <p>Hi, I’m an undergraduate Information System Student in Telkom University and I’m interested in data</p>
     </td>
-    <td rowspan="2"> <img src="Foto Non-Formal (1).jpg" alt="Foto Dimas" style = "width: 320px;height: 420px">
+    <td rowspan="2"> <img src="https://i.imgur.com/CHTmkDM.jpeg" alt="Foto Dimas" style = "width: 320px;height: 420px">
     <h2>Dimas Ibnu Muthi</h2></td>
   </tr>
   <tr style="height: 100px" align="center">
