--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <style>
 table, td {
-  border: 1px solid black;
+  border: 2px solid black;
   border-collapse: collapse;
 }
 </style>
+<title>About Me</title>
 </head>
 <body>
 <h1 align= "center">Welcome!</h1>
@@ -14,24 +15,34 @@ table, td {
   <tr style="height: 100px" align="center">
     <td>
         <h1>About Me</h1>
-        <p>Hi, I’m an undergraduate Information System Student in Telkom University and I’m interested in data</p>
+        <p>Hi, I’m an undergraduate Information System Student in Telkom University and I’m interested in technology and its application in solving everyday problems. I specialize in the field of analytics, data, and math. I'm always eager to learn new things, brainstorm new ideas, and collaborating with others.</p>
     </td>
     <td rowspan="2"> <img src="Foto Non-Formal.jpg" alt="Foto Dimas" style = "width: 320px;height: 420px">
     <h2>Dimas Ibnu Muthi</h2></td>
   </tr>
   <tr style="height: 100px" align="center">
     <td><h1>Work Experience</h1>
-        <li>blabla</li>
-        <li>blabla</li>
+        <dl>
+          <dt>Gaming Live Support</dt>
+          <dd>- Resolving issues, answering questions, and offering guidance to players during gameplay</dd>
+          <dt>English & Indonesian Audio Transcriptionist</dt>
+          <dd>- Converting speech from audio into written text</dd>
+          <dt>English - Indonesian Translator</dt>
+          <dd>- Translating English text into Indonesian text</dd>
+        </dl>
     </td>
   </tr>
   <tr style="height: 100px" align="center">
-    <td><h1>
-        Education
-    </h1>
-    <li>blabla</li>
-    <li>blabla</li>
-</td>
+    <td><h1>Education</h1>
+        <dl>
+          <dt>SD Swasta Panglima Polem Rantauprapat</dt>
+          <dt>SMP Swasta Panglima Polem Rantauprapat</dt>
+          <dt>English - Indonesian Translator</dt>
+          <dd>- Translating English text into Indonesian text</dd>
+          <dt>English - Indonesian Translator</dt>
+          <dd>- Translating English text into Indonesian text</dd>
+        </dl>
+      </td>
     <td rowspan="2"><h1>
         Contact
     </h1>
