--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@ table, td {
     </td>
     <td rowspan="2"> <img src="Foto Non-Formal.jpg" alt="Foto Dimas" style = "width: 320px;height: 420px">
     <h2>Dimas Ibnu Muthi</h2></td>
+    <h3>Bandung, Indonesia</h3>
   </tr>
   <tr style="height: 100px" align="center">
     <td><h1>Work Experience</h1>
         <dl>
           <dt>Gaming Live Support</dt>
           <dd>- Resolving issues, answering questions, and offering guidance to players during gameplay</dd>
+          <dt> </dt>
           <dt>English & Indonesian Audio Transcriptionist</dt>
           <dd>- Converting speech from audio into written text</dd>
+          <dt> </dt>
           <dt>English - Indonesian Translator</dt>
           <dd>- Translating English text into Indonesian text</dd>
         </dl>
@@ -37,23 +40,24 @@ table, td {
         <dl>
           <dt>SD Swasta Panglima Polem Rantauprapat</dt>
           <dt>SMP Swasta Panglima Polem Rantauprapat</dt>
-          <dt>English - Indonesian Translator</dt>
-          <dd>- Translating English text into Indonesian text</dd>
-          <dt>English - Indonesian Translator</dt>
-          <dd>- Translating English text into Indonesian text</dd>
+          <dt>SMAN 3 Rantau Utara</dt>
+          <dd>- Kelas IPA</dd>
+          <dt>Telkom University</dt>
+          <dd>- S1 Sistem Informasi</dd>
         </dl>
       </td>
     <td rowspan="2"><h1>
         Contact
     </h1>
-<li>
-    blabla
-</li></td>
+<li>WhatsApp & Telegram: +62822-7455-5348</li>
+<li>Email: dimasibnumuthi@gmail.com</li>
+  
+  </td>
   </tr>
   <tr style="height: 100px" align="center">
-    <td><h1>Projects</h1>
-        <li>blabla</li>
-        <li>blabla</li>
+    <td><h1>Achievements</h1>
+        <li>3rd Place Inspiring Youth Competition Scientific Paper</li>
+        <li>6th Runner-Up International Youth Economic Conference Scientific Paper</li>
     </td>
   </tr>
 </table>
