--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ table, td {
         <p>Hi, I’m an undergraduate Information System Student in Telkom University and I’m interested in technology and its application in solving everyday problems. I specialize in the field of analytics, data, and math. I'm always eager to learn new things, brainstorm new ideas, and collaborating with others.</p>
     </td>
     <td rowspan="2"> <img src="Foto Non-Formal.jpg" alt="Foto Dimas" style = "width: 320px;height: 420px">
-    <h2>Dimas Ibnu Muthi</h2></td>
-    <h3>Bandung, Indonesia</h3>
+    <h2>Dimas Ibnu Muthi</h2>
+    <h3>Bandung, Indonesia</h3></td>
+    
   </tr>
   <tr style="height: 100px" align="center">
     <td><h1>Work Experience</h1>
